--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "gray-matter": "^4.0.3",
     "next": "13.4.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-highlight": "^6.0.0",
+    "remark-gfm": "^3.0.1"
   }
 }
